# selftune

./: README.md  docker-compose.mock.yml  docker-compose.yml  submission.yml
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  Justfile  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py  main.py
backend/app/api/routes/: auth.py  datasets.py  jobs.py  models.py
backend/app/core/: config.py  security.py  storage.py
backend/app/crud/: dataset.py  job.py  model.py  user.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  dataset.py  job.py  tuned_model.py  user.py
backend/app/schemas/: dataset.py  job.py  model.py  user.py
backend/app/worker/: celery_app.py  tasks.py
backend/tests/: conftest.py  test_auth.py  test_dataset.py  test_jobs.py  test_models.py
docs/: ARCHITECTURE.md
finetune/: Dockerfile  requirements.txt  training_loop.py  worker.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vitest.config.js
frontend/src/: App.jsx  App.test.jsx  index.css  main.jsx  setupTests.js
frontend/src/__tests__/: App.test.jsx  UserFlow.test.jsx
frontend/src/components/: ErrorBoundary.jsx  Header.jsx  Sidebar.jsx  ui.jsx
frontend/src/data/: mockData.js
frontend/src/mocks/: handlers.js
frontend/src/services/: api.js
ml_worker/: Dockerfile  worker.py
mock_finetune/: Dockerfile  requirements.txt  training_loop.py  worker.py
validation/: Dockerfile  config.py  requirements.txt  storage.py  tasks.py  worker.py
(+24 files in other folders)
